--- a/index.html
+++ b/index.html
@@ -33,6 +33,58 @@
     <a href="/">Primary Link</a>
     <a href="/">Secondary Link</a>
 
+    <hr>
+
+    <h2>@lists</h2>
+
+    <h3>unordered list</h3>
+
+    <ul>
+      <li>Item One</li>
+      <li>Item Two</li>
+      <li>Item Three</li>
+    </ul>
+
+    <h3>unordered Inline list</h3>
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+    </ul>
+
+    <h3>reverse ordered list</h3>
+    <ol>
+        <li>Milk</li>
+        <li>Eggs</li>
+        <li>Break</li>
+    </ol>
+    <hr>
+
+    <h2>@nav</h2>
+
+    <nav>
+        <div>iAmbrand</div>
+        <ul>
+            <li>
+                <a href="/">home</a>
+            </li>
+            <li>
+                <a href="/">products</a>
+            </li>
+            <li>
+                <a href="/">about</a>
+            </li>
+        </ul>
+    </nav>
+
+    <hr>
+
+    <h2>@header</h2>
+
+    <header>
+           <img src ="images/hero.svg"/>
+           <h1>heading inside hero</h1>
+    </header>
 
 
 </body>
