--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
            <h1>heading inside hero</h1>
     </header>
 
+    <hr>
+
+    <h2>@sections</h2>
+    <section>
+        <h3>white section</h3>
+        <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3>off white section</h3>
+        <p>This will have gray background</p>
+    </section>
+
+    <hr>
+    <h2>@footer</h2>
+    <footer>
+        <div>Some small heading inside footer</div>
+        <ul>
+            <li>socialOne</li>
+            <li>socialTwo</li>
+            <li>socialThree</li>
+        </ul>
+    </footer>
+
 
 </body>
 </html>
