--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+   
+    <link href="style.css" rel ="stylesheet"/>
 </head>
 <body>
-    <h1>Jayanti's Component Library</h1>
-    <p>I am attending neog.camp and I want to make library whic would make all my projects look good and consistent.</p>
+    <h1 id ="lib-header">Jayanti's Component Library</h1>
+    <p class="para">I am attending neog.camp and I want to make library whic would make all my projects look good and consistent.</p>
     
     <hr> 
 
