--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="style.css" rel ="stylesheet"/>
 </head>
 <body>
-    <h1 id ="lib-header">Jayanti's Component Library</h1>
-    <p class="para">I am attending neog.camp and I want to make library whic would make all my projects look good and consistent.</p>
+    <h1>Jayanti's Component Library</h1>
+    <p>I am attending neog.camp and I want to make library whic would make all my projects look good and consistent.</p>
     
     <hr> 
 
@@ -18,6 +18,7 @@
     <h1>The biggest heading h1</h1>
     <h2>The second biggest heading h2 </h2>
     <p>Let me show you the normal text.This is free flowing and will wrap at the end like a paragraph.</p>
+    <p>This paragraph will have a <strong>bold</strong> text.</p>
     <small>This is relatively smaller text</small><small>This is relatively smaal 2 text</small>
 
     <hr>
