--- a/index.html
+++ b/index.html
@@ -33,30 +33,31 @@
     <hr>
 
     <h2>@links</h2>
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary" href="/">Primary Link</a>
+    <a class ="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
 
     <h2>@lists</h2>
 
     <h3>unordered list</h3>
+    <p>This list will not have not have the bullet</p>
 
-    <ul>
+    <ul class ="list-non-bullet">
       <li>Item One</li>
       <li>Item Two</li>
       <li>Item Three</li>
     </ul>
 
     <h3>unordered Inline list</h3>
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class ="list-non-bullet">
+        <li class ="list-item-inline">Inline Item One</li>
+        <li class ="list-item-inline">Inline Item Two</li>
+        <li class ="list-item-inline">Inline Item Three</li>
     </ul>
 
     <h3>reverse ordered list</h3>
-    <ol>
+    <ol reversed>
         <li>Milk</li>
         <li>Eggs</li>
         <li>Break</li>
