--- a/index.html
+++ b/index.html
@@ -85,22 +85,26 @@
 
     <h2>@header</h2>
 
-    <header>
-           <img src ="images/hero.svg"/>
-           <h1>heading inside hero</h1>
+    <header class="hero">
+           <img class=" hero-img" src ="images/hero.svg"/>
+           <h1 class="hero-heading" >Adarsh Balika the <span style="color: var(--primary-color)">Web Developer</span></h1>
     </header>
 
     <hr>
 
     <h2>@sections</h2>
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-center">
+        <h1>white section</h1>
+        <p>Here we provide you with a structured course that will teach you all you need to know to become a front-end web developer. Work through each section, learning new skills (or improving existing ones) as you go along. Each section includes exercises and assessments to test your understanding before you move forward.</p>
+        </div>
     </section>
 
-    <section>
-        <h3>off white section</h3>
-        <p>This will have gray background</p>
+    <section class="section ow">
+        <div class="container container-center">
+         <h1>off white section</h1>
+        <p>Here we provide you with a structured course that will teach you all you need to know to become a front-end web developer. Work through each section, learning new skills (or improving existing ones) as you go along. Each section includes exercises and assessments to test your understanding before you move forward.</p>
+        </div>
     </section>
 
     <hr>
